Create the correct route such that /tweets adds to the databse

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -4,7 +4,7 @@ textarea {
   background-color: #f4f1ec;
   border-bottom: 4px solid black;
   resize: none;
-  padding-bottom: 0px;
+  font-weight: 700;
 }
 
 #tweet-button {
