Add error message handling to replace the old alert error message handling

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -39,10 +39,14 @@ main.container {
   bottom: 0;
   right: 0;
   background-color: red;
+  color:white;
   border-radius: 100%;
   border-width: 0;
+  /* font-size: 200%; */
+  padding: .75em;
+  margin: .75em;
 }
 
-.nagivate-up-button:hover{
+.nagivate-up-button:hover {
   cursor: pointer;
 }
