--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,4 @@
-textarea {
+textarea.new-tweet {
   border: none;
   width: 100%;
   background-color: #f4f1ec;
@@ -7,11 +7,32 @@ textarea {
   font-weight: 700;
 }
 
+.container {
+  align-items: center;
+  /* display: flex; */
+}
+
+.error-message {
+  color: red;
+  text-align: center;
+  border-color: red;
+  border-style: solid;
+  border-width: 4px;
+  margin: 1em;
+  overflow-y: hidden;
+}
+
+#tweets-container {
+}
+
 #tweet-button {
   font-family: "Bungee";
   color: white;
   background-color: #4056a1;
   border: none;
+}
+
+.tweet {
 }
 
 .counter {
