--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,6 @@
 nav.top-nav {
+ display:flex;
+ justify-content: space-between;
   font-family: "Bungee";
   height: 120px;
   top: 0px;
@@ -11,16 +13,15 @@ nav.top-nav {
 
 .title {
   margin: 1.5em;
-  float: left;
   font-size: 36px;
 }
 
 .navbutton {
-  float: right;
+
   margin: 1.5em;
   font-family: "Souce Sans Pro", sans-serif;
 }
-.navbutton:hover{
+.navbutton:hover {
   cursor: pointer;
 }
 
