--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,6 +1,12 @@
 .flex {
   display: flex;
   justify-content: space-between;
+  
+}
+
+#tweets-container{
+  display:flex;
+  flex-direction: column-reverse;
 }
 
 article.tweet {
