--- a/public/styles/media.css
+++ b/public/styles/media.css
@@ -1,5 +1,15 @@
 @media only screen and (min-width: 1024px) {
-  #desktop-display {
-    margin: 1000000px;
+  #desktop-width {
+    margin-top: 7em;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .container {
+  }
+
+  header#main, main.container{
+      margin: 2em 2em 0 0;
+ 
   }
 }
