--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,11 +8,12 @@ nav.top-nav {
   color: #ffffff;
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
 }
 
 .title {
   margin: 1.5em;
+  /* float: left; */
   font-size: 36px;
 }
 
