--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,7 +8,7 @@ textarea.new-tweet {
 }
 
 .container {
-  margin-top: 2em;
+  margin-top: 550px;
   align-items: stretch;
   display: flex;
   flex-direction: column;
