UI/UX Changes to be look more nice

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,6 +23,10 @@ body {
   font-family: "Source Sans Pro", sans-serif;
 }
 
+.description{
+  color:transparent;
+}
+
 main.container {
   width: 90%;
   background-color: #f4f1ec;
