--- a/public/styles/media.css
+++ b/public/styles/media.css
@@ -6,33 +6,54 @@
     height: 120px;
     top: 0px;
     background-color: #4056a1;
-    color: #DBCFB0;
+    color: #dbcfb0;
     width: 100%;
     position: fixed;
-    
+
     z-index: 1;
   }
 
   #desktop-width {
     margin-top: 7em;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-between; */
   }
 
   main.container {
-    margin: 1em 3.5em 0 17em;
+    margin-top: 0;
+    width: 50%;
+    margin-left: auto;
+    margin-right: 10%;
+  }
+
+
+
+  article.tweet, #tweet-button, textarea{
+      margin-left:5%;
+      /* margin-right:5%; */
+  }
+
+  #main {
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+    height: 100%;
+    width: 40%;
+  }
+
+  .description {
+    margin-top: 2em;
+    font-style: italic;
+    color: #dbcfb0;
   }
 
   header#main {
-    margin: 8em 5em 0 2em;
     position: fixed;
-    top:0;
-    left:0;
-    background-color: #77878B;
+    top: 0;
+    left: 0;
+    margin-top: 3em;
+    background-color: #77878b;
     text-align: center;
-    color: #DBCFB0;
-    padding: 1.5em;
+    color: #dbcfb0;
+    padding: 3em;
     background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
-    
   }
 }
